# PIKO-Continuum-Robot-MPC-2026RAL

./: README.md
Physics-Informed-Split-Koopman-Operators-main/: example.ipynb
Revision and additional material/: Bruder's residual model.py
Simulation/: MuscleDrivenV2.py  MuscleDrivenV3.py  ParamIdeV1_JAX.py  ParamIdeV2_JAX.py  ParamIdeV2_Optimization.py  ParamIdeV3_Optimization.py  SimulationGenerator_V1.py  SimulationGenerator_V2.py
harp_oneseg_ws/src/data_collection/: package.xml  setup.py
harp_oneseg_ws/src/data_collection/data_collection/: RAL_test.py  data_reciever.py  debug_mpc_model.py  error_evaluation.py  mpc_regulator_control.py  plot_mpc_asuLogo.py  plot_mpc_log.py  post_pocess.py
harp_oneseg_ws/src/harp_oneseg_launch/: package.xml  setup.cfg  setup.py
harp_oneseg_ws/src/harp_oneseg_launch/launch/: harp_launch.py  mpc_launch.py
harp_oneseg_ws/src/optitrack_streaming/: package.xml  setup.cfg  setup.py
harp_oneseg_ws/src/optitrack_streaming/optitrack_streaming/: NatNetClient.py  udp_optitrack_publisher.py
harp_oneseg_ws/src/regulator_input/: package.xml  setup.cfg  setup.py
harp_oneseg_ws/src/regulator_input/regulator_input/: regulator_control.py
