<?xml version="1.0"?>
<package format="3">
  <name>data_collection</name>
  <version>0.0.0</version>
  <description>Collects synchronized regulator &amp; OptiTrack data</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- for ament_python packaging -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
