<?xml version="1.0"?>
<package format="3">
  <name>harp_oneseg_launch</name>
  <version>0.0.0</version>
  <description>Launch file package for HARP soft robot</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- ament_python build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
